@@ -1,0 +1,165 @@
+#!/bin/sh
+# Test 'cmp'.
+
+# Copyright 2017 Free Software Foundation, Inc.
+
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. "${srcdir=.}/init.sh"; path_prepend_ ../src
+
+fail=0
+
+cat <<'EOF' > exp || fail=1
+cmp a a
+0
+cmp a b
+a b differ: char 1, line 1
+1
+cmp a c
+cmp: EOF on c after byte 0, line 0
+1
+cmp a d
+cmp: d: No such file or directory
+2
+cmp b a
+b a differ: char 1, line 1
+1
+cmp b b
+0
+cmp b c
+cmp: EOF on c after byte 0, line 0
+1
+cmp b d
+cmp: d: No such file or directory
+2
+cmp c a
+cmp: EOF on c after byte 0, line 0
+1
+cmp c b
+cmp: EOF on c after byte 0, line 0
+1
+cmp c c
+0
+cmp c d
+cmp: d: No such file or directory
+2
+cmp d a
+cmp: d: No such file or directory
+2
+cmp d b
+cmp: d: No such file or directory
+2
+cmp d c
+cmp: d: No such file or directory
+2
+cmp d d
+cmp: d: No such file or directory
+2
+cmp -l a a
+0
+cmp -l a b
+1 141 142
+1
+cmp -l a c
+cmp: EOF on c after byte 0
+1
+cmp -l a d
+cmp: d: No such file or directory
+2
+cmp -l b a
+1 142 141
+1
+cmp -l b b
+0
+cmp -l b c
+cmp: EOF on c after byte 0
+1
+cmp -l b d
+cmp: d: No such file or directory
+2
+cmp -l c a
+cmp: EOF on c after byte 0
+1
+cmp -l c b
+cmp: EOF on c after byte 0
+1
+cmp -l c c
+0
+cmp -l c d
+cmp: d: No such file or directory
+2
+cmp -l d a
+cmp: d: No such file or directory
+2
+cmp -l d b
+cmp: d: No such file or directory
+2
+cmp -l d c
+cmp: d: No such file or directory
+2
+cmp -l d d
+cmp: d: No such file or directory
+2
+cmp -s a a
+0
+cmp -s a b
+1
+cmp -s a c
+1
+cmp -s a d
+2
+cmp -s b a
+1
+cmp -s b b
+0
+cmp -s b c
+1
+cmp -s b d
+2
+cmp -s c a
+1
+cmp -s c b
+1
+cmp -s c c
+0
+cmp -s c d
+2
+cmp -s d a
+2
+cmp -s d b
+2
+cmp -s d c
+2
+cmp -s d d
+2
+EOF
+
+echo a >a
+echo b >b
+: >c
+rm -f d
+
+for option in '' -l -s; do
+  for i in a b c d; do
+    for j in a b c d; do
+      echo cmp $option $i $j
+      cmp $option $i $j 2>&1
+      echo $?
+    done
+  done
+done >out
+
+compare exp out || fail=1
+
+Exit $fail
